--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <!DOCTYPE html>
-<head><title>tom-konda.github.io</title></head>
-<body><p>HTML文書</p></body>
+<head>
+	<title>tom-konda.github.io</title>
+</head>
+<body>
+	<article>
+		<p>HTML文書</p>
+	</article>
+</body>
