--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <head>
-	<title>tom-konda.github.io</title>
+    <title>tom-konda</title>
+    <meta charset="UTF-8">
 </head>
 <body>
-	<article>
-		<p>HTML文書</p>
-	</article>
+    <header>
+        <h1>About tom-konda</h1>
+    </header>
+    <article>
+        <ul>
+            <li><a href="//twitter.com/tom_k_en">Twitter</a></li>
+            <li><a href="//github.com/tom-konda/">Github</a></li>
+            <li><a href="//qiita.com/tom_konda">Qiita</a></li>
+            <li><a href="//jsdo.it/tom-konda/">jsdo.it</a></li>
+            <li><a href="//paiza.io/users/show/1095">paiza.io</a></li>
+        </ul>
+    </article>
+
 </body>
