--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         <ul>
             <li><a href="//twitter.com/tom_k_en">Twitter</a></li>
             <li><a href="//github.com/tom-konda/">Github</a></li>
+            <li><a href="//tom-konda.github.io/blog/">Blog</a></li>
             <li><a href="//qiita.com/tom_konda">Qiita</a></li>
             <li><a href="//jsdo.it/tom-konda/">jsdo.it</a></li>
             <li><a href="//paiza.io/users/show/1095">paiza.io</a></li>
+            <li><a href="//www.openstreetmap.org/user/tom_konda">OpenStreetMap</a></li>
         </ul>
     </article>
 
